styles.scss
/* ... */
.NewVersionAlert {
  position: fixed;
  background-color: $success;
  color: $white;
  line-height: 5em;
  left: 0;
  right: 0;
  top: 0;
  text-align: center;
  z-index: 1030;
  font-size: 90%;
  button {
    background-color: $white;
    font-size: 1em;
    margin-left: 1em;
    :hover {
      background-color: $primary;
    }
  }
}

.Score {
  &Letter {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 1.4em;
    height: 1.4em;
    border-radius: 4px;
    color: rgba(255, 255, 255, 0.95);
    line-height: 1em;
    padding: 0.66em !important;
    font-weight: 700;

    &A { background-color: $score-letter-A !important }
    &B { background-color: $score-letter-B !important }
    &C { background-color: $score-letter-C !important }
    &D { background-color: $score-letter-D !important }
    &E { background-color: $score-letter-E !important }
    &Large {
      width: 1em;
      height: 1em;
      font-size: 66px;
    }
  }
  &ColoredText {
    &A { color: darken($score-letter-A, 2%) }
    &B { color: darken($score-letter-B, 10%) }
    &C { color: darken($score-letter-C, 10%) }
    &D { color: darken($score-letter-D, 10%) }
    &E { color: darken($score-letter-E, 10%) }
  }
}

.Step {
  &Body {
    &.disabled {
      opacity: 0.5;
    }
  }

  &Header {
    min-height: 50px;
  }

  &Icon {
    display: grid;
    align-items: center;
    align-content: center;
    justify-content: center;
    justify-items: center;
    width: 22px;
    height: 22px;
  }

  &Label {
    font-size: 20px;
    font-weight: 700;
    margin-bottom: 3px;
  }
}

.Subscores {
  line-height: 1.5em;
}

.Summary {
  &ProductImage {
    width: 4.35em;
    height: 4.35em;
  }

  @media screen and (width < $viewport-sm) {
    position: fixed;
    z-index: 1020;
    left: 0;
    right: 0;
    bottom: -3px;

    &ProductImage {
      width: 3.2em;
      height: 3.2em;
    }

    .card {
      border: 0;
      border-radius: 0;
      .card-header {
        border-radius: 0;
      }
      .card-body {
        padding: 10px;
      }
    }

    .card-header {
      color: red;
    }
  }

  &Score {
    &Funit {
      margin-top: -5px;
    }
  }
}

.Tabs {
  &Tab {
    border-top: 0 !important;
    box-shadow: 0 -2px 0 0 $primary;
    color: $text-darker;
    font-weight: 700;

    &.active {
      color: $primary !important;
    }

    &:not(.active) {
      background-color: rgba($info, 0.1) !important;
      border-top: 1 solid #ddd;
      box-shadow: none;
      &:hover {
        background-color: rgba($info, 0.2) !important;
      }
    }
  }
}

// Specifics for the comparator modal, when displaying the "total" impacts, we want the stroke to be black instead of white by default.
.total-impacts rect.highcharts-point {
  stroke: #333;
}

